--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,10 +16,13 @@
     从而判断是否登录成功，该参数是 Spring Security 默认的，用户可以自行定义。
     -->
     <div th:if="${param.error}" style="color: red;height: 40px;text-align: left;font-size: 1.1em">
-        <img th:src="@{/login/img/loginError.jpg}" width="20px">用户名或密码错误，请重新登录！
+        <!-- 在页面上显示 Spring Security 验证的错误信息 -->
+        <img th:src="@{/login/img/loginError.jpg}" width="20px"><span th:text="${session[SPRING_SECURITY_LAST_EXCEPTION].message}" ></span>
     </div>
     <input type="text" name="username" class="form-control" placeholder="用户名" required="" autofocus="">
     <input type="password" name="password" class="form-control" placeholder="密码" required="">
+    <input type="text" name="captcha" class="form-control" placeholder="验证码">
+    <img th:src="@{/captcha.jpg}" alt="captcha" height="50px" width="150px">
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" name="rememberme"> 记住我
