--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -22,7 +22,7 @@
     <input type="text" name="username" class="form-control" placeholder="用户名" required="" autofocus="">
     <input type="password" name="password" class="form-control" placeholder="密码" required="">
     <input type="text" name="captcha" class="form-control" placeholder="验证码">
-    <img th:src="@{/captcha.jpg}" alt="captcha" height="50px" width="150px">
+    <img id="verification" th:src="@{/captcha.jpg}" alt="captcha" height="50px" width="150px" title="看不清？换一张">
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" name="rememberme"> 记住我
@@ -31,5 +31,17 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit" >登录</button>
     <p class="mt-5 mb-3 text-muted">Copyright© 2019-2020</p>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $(function () {
+            // 刷新验证码
+            $("#verification").bind("click", function () {
+                $(this).attr('src', '/captcha.jpg?random=' + Math.random());
+            });
+        });
+    });
+</script>
 </body>
 </html>
