--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -22,7 +22,7 @@
     <input type="text" name="username" class="form-control" placeholder="用户名" required="" autofocus="">
     <input type="password" name="password" class="form-control" placeholder="密码" required="">
     <input type="text" name="captcha" class="form-control" placeholder="验证码">
-    <img id="verification" th:src="@{/captcha.jpg}" alt="captcha" height="50px" width="150px" title="看不清？换一张">
+    <img class="mt-2" id="verification" th:src="@{/captcha.jpg}" alt="captcha" height="50px" width="150px" title="看不清？换一张">
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" name="rememberme"> 记住我
